--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "parcel": "^2.15.4"
   },
   "dependencies": {
-    "react-router-dom": "^6.30.1"
+    "@tailwindcss/postcss": "^4.1.13",
+    "react-router-dom": "^6.30.1",
+    "tailwindcss": "^4.1.13"
   }
 }
